--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.3.0",
+    "eslint": "^9.3.0",
+    "globals": "^15.3.0",
     "nodemon": "^2.0.15"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.17.3",
+    "i": "^0.3.7",
     "mongoose": "^6.2.6"
   }
 }
